# emarket

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
app/: Cargo.toml
app-config/: Cargo.toml
app-config/src/: lib.rs
app/src/: config.rs  main.rs
auth-api/: Cargo.toml
auth-api/src/: error.rs  lib.rs  state.rs
auth-api/src/services/: kafka.rs  keycloak.rs  mod.rs
backend/auth-api/: Cargo.toml
backend/auth-api/src/: error.rs  lib.rs  main.rs  state.rs  ui.rs
backend/auth-api/src/services/: kafka.rs  keycloak.rs  mod.rs
backend/shared/: Cargo.toml
backend/shared/src/: auth.rs  html_or_json.rs  kafka.rs  kafka_events.rs  lib.rs
config/: Cargo.toml
config-types/: Cargo.toml
config-types/src/: kafka.rs  keycloak.rs  lib.rs
config/src/: lib.rs
doc/: functional_requirements.md  internship_requirements.md  non_functional_requirements.md  smart_contract_requirements.md
shared/: Cargo.toml
shared/src/: kafka.rs
