[workspace]
members = [
    "backend/auth-api",
    "backend/shared"
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.9" }
maud = { version = "0.27.0", features = ["axum"] }
thiserror = { version = "2.0.18" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "time"] }
reqwest = { version = "0.13.4", features = ["form", "json"] }
rdkafka = { version = "0.39.0", features = ["tokio", "cmake-build"] }
serde_json = { version = "1.0.150" }
serde = { version = "1.0.228", features = ["derive"] }