[workspace]
members = ["app",
    "auth-api",
    "config",
    "shared"
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.9" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "time"]}
rdkafka = { version = "0.39.0", features = ["tokio", "cmake-build"] }
serde_json = { version = "1.0.150" }
serde = { version = "1.0.228", features = ["derive"] }
tracing = { version = "0.1.44" }
thiserror = { version = "2.0.18" }
url = { version = "2.5.8", features = ["serde"] }