[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { version = "0.15.25" }
dotenvy = "0.15.7"
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.23" }
axum = { workspace = true }
auth-api = { path = "../auth-api" }
