[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = { workspace = true }
axum = { workspace = true }
auth-api = { path = "../auth-api" }
app-config = { path = "../app-config" }