[package]
name = "auth-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.13.4", features = ["form", "json"] }
rdkafka = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
shared = { path = "../shared" }
config-types = { path = "../config-types" }
serde_json = "1.0.150"