[package]
name = "auth-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {workspace = true}
axum-extra = {version = "0.12.6", features = ["cookie"]}
maud = {workspace = true}
reqwest = { version = "0.13.4", features = ["form", "json"] }
serde = {workspace = true}
tokio = {workspace = true}
serde_json = "1.0.150"
