[package]
name = "auth-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
maud = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
rdkafka = { workspace = true }
thiserror = { workspace = true }
shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
